@@ -1,3 +1,11 @@
+1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* ObserverSwarm.m ([ObserverSwarm -buildObjects]): Use Colormap
+	instead of XColormap for colorMap.  Revert GUI_ButtonRight change.
+	Use setDisplayWidget:colormap: instead of setDisplayWidget:Colormap:.
+
+	* main.m (main): Constify argv.
+
 1998-01-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* ObserverSwarm.m: Include gui.h.
